== In Git

=== New Features
* Tables yielded to step definitions are no longer frozen, so you can edit their data without #dup'ing (Aslak Hellesøy)
* Transform can now transform tables, using /table:col1,col2,col3/ (#478 Corey Haines)
* cucumber.yml can also end in .yaml and be located in .config/ or config/ dirs (#447 trans)
* Turkish support. (Hakan Şenol Ensari)
* Upgrade Rails generator to set a dependency to Spork 0.7.2. (Aslak Hellesøy)
* Installation via rubygems will print a message telling people to read this file. (Aslak Hellesøy)
* Files generated by the Rails cucumber generator have information about the risks of editing. (Aslak Hellesøy)
* Rotten Cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
* Stop the confusion between "homepage" and "home page" by allowing both (Ryan Bigg & Bodaniel Jeanes)
* Make script/cucumber file generated by the Rails cucumber generator look for cucumber in vendored gems as well. (Tom ten Thij)

=== Bugfixes
* instance_exec get declared private (#477 Tim Galeckas)
* Transforms can return nil. (Thomas Marek)
* Generated rails rake tasks doesn't use the vendored version cucumber binary (#468 Josh Nichols)
* Incorrect diagnostics in case when Before raises in presence of Background (#465 Fedor Kocherga)
* Error on pystring in scenario outline with pretty formatter (#475 Aslak Hellesøy)
* Adding After('@allow-rescue') to set allow_rescue back to its former value. (Alf Mikula)
* Feature files are now sorted before they are executed, because different operating systems may list files differently. (Aslak Hellesøy)
* Fixed image loading for Windows in PDF formatter. Allow use of both png and jpg. (#461 Declan Whelan)
* Before('~@no-txn') is run on all scenarios without @no-txn causing Cucumber::Rails::World.use_transactional_fixtures to always be true. (#457 Aslak Hellesøy)
* JUnit formatter not handling scenario outline tables (#472 Matt Wynne)